--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
     <!-- Header -->
     <header class="ur-blue shadow-lg">
         <div class="container mx-auto px-4 py-6">
+            <!-- Title Section -->
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div>
-                    <h1 class="text-3xl font-bold">URMC Analytics Strategy</h1>
-                    <h2 class="text-xl mt-2">Executive Overview</h2>
+                    <h1 class="text-3xl font-bold">Strategic Implementation Plan</h1>
+                    <h2 class="text-xl mt-2">FY2025-2027 Analytics Roadmap</h2>
                 </div>
                 <div class="mt-4 md:mt-0">
                     <p class="text-sm">University of Rochester Medical Center</p>
@@ -38,6 +39,15 @@
                     <p class="text-sm">April 2025</p>
                 </div>
             </div>
+            <!-- Navigation -->
+            <nav class="mt-6">
+                <ul class="flex flex-wrap gap-6 text-white">
+                    <li><a href="index.html" class="hover:text-yellow-300">Overview</a></li>
+                    <li><a href="governance-structure.html" class="hover:text-yellow-300">Governance Structure</a></li>
+                    <li><a href="strategic-plan.html" class="hover:text-yellow-300">Strategic Plan</a></li>
+                    <li><a href="community-structure.html" class="hover:text-yellow-300">Community Structure</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
